[CMP-288] Added column mapping page. Spent way too much time trying to make it have a dropdown, only to find an ungodly amount of issues with that.

--- a/src/campaignPage/subPages/customLedgerManagementPage/customLedgerManagementPageTabs/CreateNewLedgerStepperSteps/thirdStepSelectFile/thirdStepSelectFile.module.css
+++ b/src/campaignPage/subPages/customLedgerManagementPage/customLedgerManagementPageTabs/CreateNewLedgerStepperSteps/thirdStepSelectFile/thirdStepSelectFile.module.css
@@ -1,4 +1,4 @@
 .dropzone {
-    height: 200px !important;
+    height: 175px !important;
     min-height: 100px !important;
 }
